--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,45 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+ 
+<body class="bs-docs-home">
 
-<%= yield %>
+		    <!-- Docs master nav -->
+	<div class="navbar navbar-inverse navbar-fixed-top bs-docs-nav">
+	  <div class="container">
+	    <a href="./" class="navbar-brand">ClientBase</a>
+	    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <div class="nav-collapse collapse bs-navbar-collapse">
+	      <ul class="nav navbar-nav">
+	        <li>
+	          <a href="#">Getting started</a>
+	        </li>
+	        <li>
+	          <a href="#">CSS</a>
+	        </li>
+	        <li>
+	          <a href="#">Components</a>
+	        </li>
+	        <li>
+	          <a href="#">JavaScript</a>
+            </li>
+	        <li>
+		          <a href="#">Customize</a>
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</div>
 
+	<%= yield %>
 </body>
 </html>
+
+
+  
+
+ 
